--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 <section>
   <h2>Contato</h2>
   <div class="contact">
-    <p><strong>Telefone / WhatsApp:</strong> (XX) XXXXX-XXXX</p>
+    <p><strong>Telefone / WhatsApp:</strong> (51) 99101-0609</p>
     <p><strong>Atendimento:</strong> Segunda a Sábado</p>
-    <p><strong>Cidade / Região:</strong> Informe aqui</p>
+    <p><strong>Cidade / Região:</strong> Canoas e Região</p>
   </div>
 </section>
 
