--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <header>
   <h1>Conserto de Micro-ondas</h1>
   <p>Assistência técnica especializada • Atendimento rápido • Garantia no serviço</p>
-  <a class="btn" href="https://wa.me/55SEUNUMERO">Chamar no WhatsApp</a>
+  <a class="btn" href="https://wa.me/5551991010609">Chamar no WhatsApp</a>
 </header>
 
 <section>
