--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conserto de Micro-ondas | Assistência Técnica Especializada</title>
-  <meta name="description" content="Conserto de micro-ondas residencial e comercial. Atendimento rápido, orçamento sem compromisso e garantia no serviço." />
+  <title>Conserto de Micro-ondas em Canoas | Assistência Técnica</title>
+
+  <meta name="description" content="Conserto de micro-ondas em Canoas. Técnico especializado, atendimento rápido, orçamento sem compromisso e garantia no serviço." />
+
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -12,48 +14,112 @@
       background: #f4f6f8;
       color: #333;
     }
+
+    /* HEADER COM IMAGEM */
     header {
-      background: #1f2933;
+      position: relative;
+      background: url('microondas.jpg') center/cover no-repeat;
       color: #fff;
-      padding: 40px 20px;
+      padding: 80px 20px;
       text-align: center;
     }
-    header h1 { margin: 0; font-size: 2.2rem; }
-    header p { font-size: 1.1rem; }
+
+    /* OVERLAY ESCURO */
+    header::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.6);
+    }
+
+    header * {
+      position: relative;
+      z-index: 2;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.6rem;
+      letter-spacing: 1px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+
     .btn {
       display: inline-block;
       background: #10b981;
       color: #fff;
-      padding: 12px 20px;
-      margin-top: 15px;
+      padding: 14px 26px;
+      margin-top: 20px;
       text-decoration: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-weight: bold;
+      font-size: 1.05rem;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
+
+    .btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
     section {
-      padding: 40px 20px;
+      padding: 50px 20px;
       max-width: 1100px;
       margin: auto;
     }
-    h2 { color: #1f2933; }
+
+    h2 {
+      color: #1f2933;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
     .cards {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+      gap: 25px;
     }
+
     .card {
       background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      transition: transform 0.2s;
     }
-    .card h3 { margin-top: 0; }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #111827;
+    }
+
+    .benefits ul {
+      max-width: 600px;
+      margin: auto;
+      list-style: none;
+      padding: 0;
+    }
+
+    .benefits li {
+      padding: 10px 0;
+      font-size: 1.05rem;
+    }
+
     .contact {
       background: #e5e7eb;
-      border-radius: 8px;
+      border-radius: 12px;
       padding: 30px;
+      text-align: center;
     }
+
     footer {
       background: #1f2933;
       color: #fff;
@@ -63,10 +129,11 @@
     }
   </style>
 </head>
+
 <body>
 
 <header>
-  <h1>Conserto de Micro-ondas</h1>
+  <h1>Conserto de Micro-ondas em Canoas</h1>
   <p>Assistência técnica especializada • Atendimento rápido • Garantia no serviço</p>
   <a class="btn" href="https://wa.me/5551991010609">Chamar no WhatsApp</a>
 </header>
@@ -76,45 +143,45 @@
   <div class="cards">
     <div class="card">
       <h3>Micro-ondas não liga</h3>
-      <p>Diagnóstico e reparo em placa eletrônica, fusível, chave de porta e fonte.</p>
+      <p>Diagnóstico em placa eletrônica, fusível, chave de porta e fonte.</p>
     </div>
     <div class="card">
       <h3>Não aquece</h3>
-      <p>Troca de magnetron, capacitor, diodo e ajustes técnicos com segurança.</p>
+      <p>Troca de magnetron, capacitor e diodo com segurança.</p>
     </div>
     <div class="card">
       <h3>Faísca ou cheiro de queimado</h3>
-      <p>Substituição de mica, pintura interna e correção de falhas elétricas.</p>
+      <p>Substituição de mica, pintura interna e correções elétricas.</p>
     </div>
     <div class="card">
       <h3>Manutenção preventiva</h3>
-      <p>Limpeza interna, revisão elétrica e testes completos.</p>
+      <p>Limpeza técnica, revisão elétrica e testes completos.</p>
     </div>
   </div>
 </section>
 
-<section>
+<section class="benefits">
   <h2>Por que escolher nosso serviço?</h2>
   <ul>
     <li>✔ Técnico especializado</li>
     <li>✔ Orçamento sem compromisso</li>
+    <li>✔ Atendimento residencial</li>
     <li>✔ Peças de qualidade</li>
     <li>✔ Garantia no conserto</li>
-    <li>✔ Atendimento residencial</li>
   </ul>
 </section>
 
 <section>
   <h2>Contato</h2>
   <div class="contact">
-    <p><strong>Telefone / WhatsApp:</strong> (51) 99101-0609</p>
+    <p><strong>WhatsApp:</strong> (51) 99101-0609</p>
     <p><strong>Atendimento:</strong> Segunda a Sábado</p>
-    <p><strong>Cidade / Região:</strong> Canoas e Região</p>
+    <p><strong>Cidade:</strong> Canoas e Região</p>
   </div>
 </section>
 
 <footer>
-  <p>© 2026 Conserto de Micro-ondas • Todos os direitos reservados</p>
+  <p>© 2026 Conserto de Micro-ondas em Canoas • Todos os direitos reservados</p>
 </footer>
 
 </body>
