--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     /* HEADER COM IMAGEM */
     header {
       position: relative;
-      background: url('microondas.jpg') center/cover no-repeat;
+      background: url('microoondas.jpg') center/cover no-repeat;
       color: #fff;
       padding: 80px 20px;
       text-align: center;
