--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
   <div class="contact">
     <p><strong>WhatsApp:</strong> (51) 99101-0609</p>
     <p><strong>Atendimento:</strong> Segunda a Sábado</p>
-    <p><strong>Cidade:</strong> Canoas e Região</p>
+    <p><strong>Cidade:</strong> Canoas e Região Metropolitana, Atendemos toda a cidade de Canoas, incluindo os bairros
+Centro, Mathias Velho, Igara, Niterói e Guajuviras</p>
   </div>
 </section>
 
